--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
-body{
-    
-  }
- 
+ body{
+  background:#cccccc
+ }
+
 #banner{
 width: 100%;
 }
  
 .principal{ background: #cccccc;
+  padding: 30px;
 
 }
 
-h1 {text-align: center}
+.titulo-principal{
+  padding-left: 20px;
+}
+
+.texto-centralizado {text-align: center}
 
 p {
     text-align: center ;
@@ -30,9 +35,19 @@ em strong{
 }
 
 .benefícios{
-  background: #ffffff;
+  background: red;
+  padding: 20px;
 }
 
-h2{
-  text-align: center;
+
+ul{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+  margin-right: 15%;
+}
+
+
+.imagembeneficios{
+  width: 50%;
 }
