--- a/produtos.css
+++ b/produtos.css
@@ -1,5 +1,18 @@
 header{
     background: #bbbbbb;
+    padding: 20px 0;
+}
+
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top: 110%;
+    right: 0%;
 }
 
 nav li {
@@ -13,4 +26,35 @@ nav a {
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;
+}
+
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    margin-top: 10px;
+}
+
+.produtos {
+    font-size: 30px ;
+    font-weight: bold;
+}
+
+.produto-descrição {
+    font-size: 18px;
+}
+
+.produto-preço {
+    font-size: 22px;
+    font-weight: bold;
 }
