--- a/produtos.css
+++ b/produtos.css
@@ -28,6 +28,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
@@ -43,9 +48,24 @@ nav a {
     padding: 30px 20px;
     box-sizing: border-box;
     margin-top: 10px;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.produtos {
+.produtos li:hover {
+    border-color: #C78C19;
+    font-size: 40px;
+}
+
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+.produtos h2 {
     font-size: 30px ;
     font-weight: bold;
 }
@@ -57,4 +77,16 @@ nav a {
 .produto-preço {
     font-size: 22px;
     font-weight: bold;
+}
+
+footer {
+    text-align: center;
+    background-image: url("bg.jpg");
+    padding: 40px 0 ;
+}
+
+.copyright {
+    color: #ffffff;
+    font-size: 13px;
+    margin: 20px 0;
 }
